alignment fixed

--- a/src/app/modules/shared-modules/shared-components/role/role.component.css
+++ b/src/app/modules/shared-modules/shared-components/role/role.component.css
@@ -12,8 +12,8 @@
 
 .scratchbutton img {
   position: fixed;
-  bottom: 80px;
-  right: 4.2%;
+  bottom: 13%;
+  right: 6.2%;
   cursor: pointer;
   background: transparent;
   max-height: 40px;
@@ -37,12 +37,13 @@
 .logo{
   
   position: fixed;
-  bottom: 0px;
-  right: 2%;
-  
+  bottom: 2px;
+  right: 0%;
+  height: 12%;
   background: transparent;
-
-  
+}
+.logo img{
+  height: 100%;
 }
 .sidebar {
   flex: 0 0 auto;
